--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/cls-hooked": "^4.2.1",
+    "@types/cookie-parser": "^1.4.1",
     "@types/csurf": "^1.9.35",
     "@types/es6-shim": "^0.31.39",
     "@types/express": "^4.16.1",
@@ -35,6 +36,7 @@
     "browserify": "^16.2.3",
     "buildfile": "^1.2.20",
     "bulma": "^0.7.4",
+    "cookie-parser": "^1.4.4",
     "history": "^4.9.0",
     "jest": "^24.5.0",
     "lerna": "^3.13.1",
